Restyle button (using padding instead of fixed width & height), make button wrap when resizing screen, remove unnecessary code and form hides and appears with previous input content given by user

--- a/app/assets/stylesheets/frontend/partials/_button.scss
+++ b/app/assets/stylesheets/frontend/partials/_button.scss
@@ -66,8 +66,9 @@
         width: 110px !important;
     }
     &--filter {
+        height: unset;
         width: 120px;
-        height: 45px;
+        padding: 1rem;
         background: #141414;
         border: 1px solid rgba(180, 180, 180, 0.5);
         filter: none;
