--- a/app/assets/stylesheets/frontend/partials/_tourney-card-new.scss
+++ b/app/assets/stylesheets/frontend/partials/_tourney-card-new.scss
@@ -48,7 +48,6 @@
 .tourney-card {
 
     width: 100%;
-    max-width: 25rem;
     filter: drop-shadow(0px 0px 19px rgba(0, 0, 0, 0.3));
     display: inline-block;
     
