--- a/app/assets/stylesheets/frontend/partials/_user.scss
+++ b/app/assets/stylesheets/frontend/partials/_user.scss
@@ -9,19 +9,22 @@
     &__buttons {
         display: flex;
         justify-content: space-between;
-        margin: 2.75rem 0 2.75rem 0;
-        align-items: flex-end;
+        margin: 2.5rem 0 2.5rem 0;
+        flex-flow: wrap;
     }
+
     &__filter-button {
         a {
-            width: 145px;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-between;
         }
     }
     &__upload-buttons {
         display: flex;
         a {
+            height: unset;
+            width: unset;
+            padding: 1rem;
             font-size: 1.2rem;
         }
         &--space {
@@ -37,7 +40,6 @@
         // grid-gap: 4.5rem 3.9rem;
         //grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
         columns: 4 325px;
-        column-gap: 1.5rem;
         //grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
         //grid-template-columns: repeat(auto-fit, 325px);
         //grid-auto-rows: 325px;
@@ -48,15 +50,4 @@
         margin-bottom: 1.5rem;
     }
     margin-bottom: 4rem;
-}
-
-@media (max-width: 62rem) {
-    .user-content {
-        &__buttons {
-            flex-flow: column;
-        }
-        &__upload-buttons {
-            //justify-content: space-between;
-        }
-    }
 }
